--- a/src/app/components/usuario-forms/usuario-forms.component.html
+++ b/src/app/components/usuario-forms/usuario-forms.component.html
@@ -107,7 +107,7 @@
             <form *ngIf="flag" class="col-8">
               <div class="opciones">
                 <div class="roles">
-                  <div class="form-floating mb-3">
+                  <div class="form-floating mb-3" *ngIf="cuentaServicio.mostrarUs" >
                     <select id="rol" class="form-select" aria-label="Default select example" [(ngModel)]="rolE"
                       name="rolE">
                       <option >ADMINISTRADOR</option>
@@ -120,7 +120,7 @@
 
                 <div class="habilitar">
                   <!--opcines de habilitar-->
-                  <div class="form-floating mb-3">
+                  <div class="form-floating mb-3" *ngIf="cuentaServicio.mostrarUs">
                     <select class="form-select" [(ngModel)]="estado" name="estado">
                       <option selected>Habilitado</option>
                       <option>Deshabilitado</option>
@@ -135,14 +135,15 @@
                 <div class="ingresos">
                   <div class="columna1">
                     <div class="form-floating mb-3">
-                      <input type="text" class="form-control" id="ci" [(ngModel)]="cuenta.usuario.ci" name="ci">
+                      <input type="text" class="form-control" id="ci" [(ngModel)]="cuenta.usuario.ci" name="ci" maxlength="10"
+                      onkeypress="return (event.charCode >= 48 && event.charCode <= 57)">
                       <label for="floatingInput">CÉDULA</label>
                     </div>
                   </div>
                   <div class="columna2">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="nombre" [(ngModel)]="cuenta.usuario.nombres"
-                        name="nombre">
+                        name="nombre"  onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
                       <label for="floatingInput">NOMBRE</label>
                     </div>
                   </div>
@@ -151,7 +152,7 @@
                   <div class="columna1">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="apellidos" [(ngModel)]="cuenta.usuario.apellidos"
-                        name="apellidos">
+                        name="apellidos"  onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
                       <label for="floatingInput">APELLIDO</label>
                     </div>
                   </div>
@@ -167,7 +168,7 @@
                   <div class="columna1">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="telefono" [(ngModel)]="cuenta.usuario.telefono"
-                        name="telefono">
+                        name="telefono" maxlength="10" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)">
                       <label for="floatingInput">TELEFONO</label>
                     </div>
                   </div>
